#641 getPlayingDuration was added to Timeline

--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/VideoSection.mustache
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/VideoSection.mustache
@@ -6,8 +6,7 @@
 
     {{^mode-init}}
         <div class="icon-wrapper">
-            <a class="icon 
-            icon-videocam-2 {{#mode-creating}}disable{{/mode-creating}}" aria-hidden="true"
+            <a class="icon icon-videocam-2 {{#mode-creating}}disable{{/mode-creating}}" aria-hidden="true"
                title="Сформировать видео-файл"></a>
         </div>
         <div class="message">{{{message}}}</div>
