--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/InfoDialog.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/InfoDialog.html
@@ -2,7 +2,7 @@
 
     <div class="dijitDialogPaneContentArea">
         <div data-dojo-attach-point="contentNode" class="cd-contentNode">
-            ${message}
+            ${!message}
         </div>
     </div>
 
